Added support for building lambda functions
